[package]
name = "transfer"
version = "0.1.0"
authors = ["zhouhui <vsop_479@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "transfer"

[lib]
path = "src/lib.rs"

[dependencies]
redis = "0.11.0"
curl = "0.4.20"
reqwest = "0.9.19"
json = "0.11.15"
tantivy = "0.10.1"
time = "0.1"